Changelog
=========

1.2 (unreleased)
----------------

- Added more strings classifiers items for this packages [macagua]

- Updated manifest file for diazo theme adding preview file [macagua]

- Update information about this package [macagua]

1.1 (2011-07-30)
----------------
- Fixed doctype [giacomos]

1.0 (2011-06-11)
----------------

- Initial release [giacomos]