@@ -9,9 +9,17 @@
 
   <genericsetup:registerProfile
       name="default"
-      title="Plone 4 Theme: Burned"
+      title="plonetheme.burned"
       directory="profiles/default"
       description="Installs the plonetheme.burned package"
+      provides="Products.GenericSetup.interfaces.EXTENSION"
+      />
+
+  <genericsetup:registerProfile
+      name="uninstall"
+      title="plonetheme.burned: Uninstall profile for Plone 4 Diazo Theme"
+      directory="profiles/uninstall"
+      description="Uninstalls the plonetheme.burned package"
       provides="Products.GenericSetup.interfaces.EXTENSION"
       />
 
