@@ -4,6 +4,8 @@ Changelog
 1.2 (unreleased)
 ----------------
 
+- Added a GenericSetup Uninstall profile [macagua]
+
 - Added more strings classifiers items for this packages [macagua]
 
 - Updated manifest file for diazo theme adding preview file [macagua]
